# ig-haskell-client

./: .ghci  LICENSE  README.md  ig-client.cabal  ig-haskell-client.cabal
src/: AuthenticationApi.hs  LightstreamerApi.hs  Main.hs  Stream.hs
src/IG/: AuthenticationApi.hs  LightstreamerApi.hs  PostgresStreamHandle.hs
