name: ig-client
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: peterwong1228@gmail.com
stability: Experimental
synopsis: IG Client
description:
  Haskell client of IG RESTful and Lightstreamer APIs
category: Web
author: Peter Wong

library
    exposed-modules:
        IG.AuthenticationApi
        IG.LightstreamerApi
        IG.PostgresStreamHandle
    build-depends:
        aeson ==0.11.2.1,
        base >=4 && <5,
        bytestring >=0.10 && <0.11,
        dns ==2.0.10,
        HDBC ==2.4.0.1,
        HDBC-postgresql ==2.3.2.4,
        http-client ==0.4.31.2,
        http-types ==0.9.1,
        iproute ==1.7.1,
        lens ==4.14,
        lens-aeson ==1.0.0.5,
        lightstreamer ==0.1.0.0,
        text ==1.2.2.1,
        wreq ==0.4.1.0
    default-language: Haskell2010
    hs-source-dirs: src

executable analyse
    main-is: Main.hs
    build-depends:
        aeson ==0.11.2.1,
        base >=4 && <5,
        bytestring >=0.10 && <0.11,
        dns ==2.0.10,
        HDBC ==2.4.0.1,
        HDBC-postgresql ==2.3.2.4,
        http-client ==0.4.31.2,
        http-types ==0.9.1,
        iproute ==1.7.1,
        lens ==4.14,
        lens-aeson ==1.0.0.5,
        lightstreamer ==0.1.0.0,
        text ==1.2.2.1,
        time ==1.6.0.1,
        uuid ==1.3.13,
        wreq ==0.4.1.0
    default-language: Haskell2010
    hs-source-dirs: src
